--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "aloha/twilio": "^5.0",
+        "ferdous/laravel-otp-validate": "^1.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "ichtrojan/laravel-otp": "^1.4",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "pragmarx/google2fa-laravel": "^2.0",
+        "seshac/otp-generator": "^0.0.7",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
