--- a/package.json
+++ b/package.json
@@ -28,21 +28,19 @@
         "crypto": false
     },
     "dependencies": {
-        "@material-ui/icons": "^4.11.3",
         "ag-grid-community": "^27.3.0",
         "ag-grid-react": "^27.3.0",
         "autoprefixer": "10.4.5",
         "namor": "^1.1.2",
-        "react-beautiful-dnd": "^11.0.5",
         "react-bootstrap": "^2.3.1",
         "react-dom": "^18.1.0",
         "react-infinite-scroll-component": "^6.1.0",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
-        "react-table": "^7.7.0",
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.1",
         "styled-components": "^5.3.5",
-        "sweetalert2": "^11.4.10"
+        "sweetalert2": "^11.4.10",
+        "xlsx": "^0.18.5"
     }
 }
