--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "aloha/twilio": "^5.0",
+        "awobaz/compoships": "^2.1",
         "ferdous/laravel-otp-validate": "^1.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -15,7 +16,6 @@
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "phpoffice/phpspreadsheet": "^1.24",
         "pragmarx/google2fa-laravel": "^2.0",
         "seshac/otp-generator": "^0.0.7",
         "spatie/laravel-permission": "^5.5"
