--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^7.3|^8.0",
         "aloha/twilio": "^5.0",
         "awobaz/compoships": "^2.1",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "dompdf/dompdf": "^2.0",
         "ferdous/laravel-otp-validate": "^1.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
